chore: updating comments

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -13,10 +13,10 @@
    "source": [
     "About the data: health_insurance.csv\n",
     "\n",
-    "* med_exp: average medical expenses per month\\\n",
-    "* age: age in years\\\n",
-    "* cron_d: quantity of cronical deseases\\\n",
-    "* income: average yearly income in thousands of dollars\\\n",
+    "* med_exp: average medical expenses per month\n",
+    "* age: age in years\n",
+    "* cron_d: quantity of cronical deseases\n",
+    "* income: average yearly income in thousands of dollars\n",
     "* plan: type of health insurance plan\n",
     "\n",
     "target $\\rightarrow$ med_exp\n"
